# pkg/genproto/rule-admin/api/admin.swagger.json
@@ -147,6 +147,36 @@
         ]
       }
     },
+    "/v1/admin/rule/{id}/context": {
+      "get": {
+        "operationId": "RuleAdminService_GetRuleServiceContext",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ruleadminGetRuleServiceContextResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "RuleAdminService"
+        ]
+      }
+    },
     "/v1/admin/variant": {
       "post": {
         "operationId": "RuleAdminService_AddVariant",
@@ -252,6 +282,58 @@
           "RuleAdminService"
         ]
       }
+    },
+    "/v1/admin/wanted-registry": {
+      "get": {
+        "operationId": "RuleAdminService_GetWantedRegistry",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ruleadminGetWantedRegistryResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "RuleAdminService"
+        ]
+      },
+      "post": {
+        "operationId": "RuleAdminService_CreateWantedBandit",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ruleadminCreateWantedBanditRequest"
+            }
+          }
+        ],
+        "tags": [
+          "RuleAdminService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -275,6 +357,36 @@
         },
         "variant": {
           "$ref": "#/definitions/ruleadminVariant"
+        }
+      }
+    },
+    "ruleadminCreateWantedBanditRequest": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "$ref": "#/definitions/ruleadminWantedBandit"
+        }
+      }
+    },
+    "ruleadminGetRuleServiceContextResponse": {
+      "type": "object",
+      "properties": {
+        "service": {
+          "type": "string"
+        },
+        "context": {
+          "type": "string"
+        }
+      }
+    },
+    "ruleadminGetWantedRegistryResponse": {
+      "type": "object",
+      "properties": {
+        "registry": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/ruleadminWantedBandit"
+          }
         }
       }
     },
@@ -380,6 +492,17 @@
       "properties": {
         "variant": {
           "$ref": "#/definitions/ruleadminVariant"
+        }
+      }
+    },
+    "ruleadminWantedBandit": {
+      "type": "object",
+      "properties": {
+        "bandit_key": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
         }
       }
     },
