# services/bandit-indexer/internal/model.go
@@ -1,27 +1,24 @@
 package internal
 
 type Bandit struct {
-	Id      string `db:"id"`
-	Service string `db:"service"`
-	Context string `db:"context"`
-	Version uint64 `db:"version"`
-	Arms    []Arm
-
 	RuleId    string    `db:"rule_id"`
+	Version   uint64    `db:"version"`
 	Config    []byte    `db:"config"`
 	BanditKey string    `db:"bandit_key"`
 	State     StateType `db:"state"`
+
+	Service string
+	Context string
+	Arms    []Arm
 }
 
 type Arm struct {
-	Id    string `db:"id"`
-	Data  []byte `db:"data"`
-	Score float64
-	Count uint64 `db:"count"`
-
 	VariantId string    `db:"variant_id"`
+	Count     uint64    `db:"count"`
 	Config    []byte    `db:"config"`
 	State     StateType `db:"state"`
+
+	Score float64
 }
 
 type StateType string
